Help message changes, Logger added