@@ -1,16 +1,30 @@
+
+	
+/*******************************************************************************
+* Copyright 2017 Infostretch Corporation
+*
+* This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
+*
+* This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+*
+* IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
+* OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT
+* OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE
+*
+* You should have received a copy of the GNU General Public License along with this program in the name of LICENSE.txt in the root folder of the distribution. If not, see https://opensource.org/licenses/gpl-3.0.html
+*
+*
+* For any inquiry or need additional information, please contact qmetrysupport@infostretch.com
+*******************************************************************************/
 package com.qmetry;
 
 
 import java.io.File;
-import java.io.FileInputStream;
-
 import java.io.IOException;
-import java.io.InputStream;
 import java.net.ProtocolException;
-import java.nio.charset.StandardCharsets;
-import java.text.SimpleDateFormat;
-import java.util.Base64;
-import java.util.Date;
+import java.util.logging.Logger;
+
+import javax.xml.bind.DatatypeConverter;
 
 import org.apache.commons.httpclient.auth.AuthenticationException;
 import org.apache.http.HttpEntity;
@@ -28,6 +42,7 @@ import org.codehaus.mojo.animal_sniffer.IgnoreJRERequirement;
 @IgnoreJRERequirement
 public class UploadToServer {
 	
+	private static final Logger LOGGER = Logger.getLogger(UploadToServer.class.getName());
 
 	public void uploadToTheServer(String apikeyserver, String jiraurlserver, String password,
 			String testrunnameserver, String labelsserver, String sprintserver, 
@@ -37,9 +52,9 @@ public class UploadToServer {
 				
 					CloseableHttpClient httpClient= HttpClients.createDefault();
 					String toEncode=username+":"+password;
-					byte[] encodedBytes = Base64.getEncoder().encode(toEncode.getBytes(StandardCharsets.UTF_8));
-			    	String encodedString= new String(encodedBytes,StandardCharsets.UTF_8);
-			    	String basicAuth = "Basic " + encodedString;
+					byte[] message = toEncode.getBytes("UTF-8");
+                    			String encoded = DatatypeConverter.printBase64Binary(message);
+			    		String basicAuth = "Basic " + encoded;
 			    	
 				    	HttpPost uploadFile = new HttpPost(jiraurlserver);
 				    	uploadFile.addHeader("Authorization", basicAuth);
@@ -77,14 +92,6 @@ public class UploadToServer {
 				    	//HttpEntity responseEntity = response.getEntity();
 				    	httpClient.close();
 				    	//Execute and get the response.
-				    	System.out.println(response.toString());
-						    	
-				    System.out.println("Username "+ ":" + username);
-				    System.out.println("Password "+ ":" + password);
-				    System.out.println("Basic AUTH "+ ":" + basicAuth);
-				    System.out.println("format "+ ":" + selectionserver);
-				    System.out.println("API Key "+ ":" + apikeyserver);
-				    System.out.println("file "+ ":" + fileserver);
-				    System.out.println("URL "+ ":" + jiraurlserver);			
+				
 	}
 }
